# CANServer

./: .dockerignore  .gitignore  Dockerfile  Makefile  README  README.md  cansend test scenario.txt  client  docker-compose.yml  example_client.conf  example_server.conf  run-container.sh  server  server.cpp  server_old.cpp  test_integration.cpp  test_server.cpp
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: build.yml
.ignore/: CMakeLists.txt  client(server).cpp  devensampleserver.cpp  sender  sender.cpp  server copy 2.cpp  server copy 3.cpp  server copy.cpp  udp.cpp
output/: client  client.conf  server  server.conf
outputarm/: test_server
tests/: server_test.cpp  test_integration.cpp  test_integration2.cpp  test_server.cpp
